--- a/views/bill.hbs
+++ b/views/bill.hbs
@@ -13,32 +13,33 @@
                       <tr>
                         <th>Mã hóa đơn</th>
                         <th>Người mua</th>
-                        <th>Ngày tạo</th>
+                        <th>Ngày</th>
+                        <th>Tình trạng</th>
                         <th><button><a href="#">Thêm hóa đơn</a></button></th>
-						<th></th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>#1</td>
-                        <td>Hoang</td>
-                        <td>12/12/2012</td>
-						<th><button><a href="#">Chỉnh Sửa</a></button></th>
+                        <td>1712016</td>
+                        <td>Duy</td>
+                        <td>01/11/2019</td>
+                        <td>Đã giao</td>
+					            	<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>#1</td>
-                        <td>Hoang</td>
-                        <td>12/12/2012</td>
-						<th><button><a href="#">Chỉnh Sửa</a></button></th>
+                        <td>1712016</td>
+                        <td>Duy</td>
+                        <td>01/11/2019</td>
+                        <td>Đang giao</td>
+					            	<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>#1</td>
-                        <td>Hoang</td>
-                        <td>12/12/2012</td>
-						<th><button><a href="#">Chỉnh Sửa</a></button></th>
+                        <td>1712016</td>
+                        <td>Duy</td>
+                        <td>01/11/2019</td>
+                        <td>Chưa giao</td>
+					            	<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
-                      </tr>
-                      <tr>
                     </tbody>
                   </table>
                         </div>
@@ -48,4 +49,4 @@
 
                 </div>
             </div><!-- .animated -->
-        </div><!-- .content -->
+</div><!-- .content -->
