--- a/views/product.hbs
+++ b/views/product.hbs
@@ -15,26 +15,25 @@
                         <th>Mã sản phẩm</th>
                         <th>Số lượng</th>
                         <th><button><a href="#">Thêm sản phẩm</a></button></th>
-						<th></th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>hoa hồng</td>
+                        <td>Easy Polo Black Edition</td>
                         <td>#1</td>
-                        <td>12</td>
+                        <td>10</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>hoa hồng</td>
-                        <td>#1</td>
-                        <td>12</td>
+                        <td>Yeezy 350 v1 Pirate Black</td>
+                        <td>#2</td>
+                        <td>5</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>hoa hồng</td>
-                        <td>#1</td>
-                        <td>12</td>
+                        <td>AF1 x PMU</td>
+                        <td>#3</td>
+                        <td>15</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       </tr>
