--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -15,26 +15,25 @@
                         <th>Trưởng shop</th>
                         <th>Địa chỉ</th>
                         <th><button><a href="#">Thêm cửa hàng</a></button></th>
-						<th></th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>123shop</td>
-                        <td>Hoang</td>
-                        <td>TP HCM</td>
+                        <td>GOAT</td>
+                        <td>Duy</td>
+                        <td>London</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>123shop</td>
-                        <td>Hoang</td>
-                        <td>TP HCM</td>
+                        <td>stockX</td>
+                        <td>Duy</td>
+                        <td>US</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       <tr>
-                        <td>123shop</td>
-                        <td>Hoang</td>
-                        <td>TP HCM</td>
+                        <td>FlightClub</td>
+                        <td>Duy</td>
+                        <td>NY</td>
 						<th><button><a href="#">Chỉnh Sửa</a></button></th>
                       </tr>
                       </tr>
