--- a/views/change_info.hbs
+++ b/views/change_info.hbs
@@ -6,7 +6,7 @@
                     <div class="col-xs-6 col-sm-6">
                         <div class="card">
                             <div class="card-header">
-                                <strong>Chỉnh sửa</strong> <small> Thông tin khách hàng</small>
+                                <strong>Chỉnh sửa - Thông tin khách hàng</strong>
                             </div>
                             <div class="card-body card-block">
                                 <div class="form-group">
@@ -37,8 +37,8 @@
                                     <div class="col-sm-2">
                                         <button type="submit">Lưu</button>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <button type="submit">Hủy Bỏ</button>
+                                    <div class="col-sm-2">
+                                        <button type="submit">Hủy</button>
                                     </div>
                                 </div>
 
@@ -49,4 +49,4 @@
 
 
             </div><!-- .animated -->
-        </div><!-- .content -->
+</div><!-- .content -->
