--- a/views/chart.hbs
+++ b/views/chart.hbs
@@ -1,1 +1,110 @@
- <h1>Thống kê </h1>
+
+
+<!--Thu nhập theo năm-->
+   <script type="text/javascript">
+  window.onload = function () {
+    var chart1 = new CanvasJS.Chart("chartContainer1",
+    {
+
+      title:{
+      text: "Thu nhập theo năm từ 2014 đến 2018"
+      },
+      axisX: {
+        valueFormatString: "YYYY",
+        interval:1,
+        intervalType: "year"
+      },
+      axisY:{
+        includeZero: false
+
+      },
+      data: [
+      {
+        type: "column",
+
+        dataPoints: [
+        { x: new Date(2014, 00, 1), y: 1000000 },
+        { x: new Date(2015, 00, 1), y: 410000 , indexLabel: "thấp nhất"},
+        { x: new Date(2016, 00, 1), y: 500000 },
+        { x: new Date(2017, 00, 1), y: 720000 },
+        { x: new Date(2018, 00, 1), y: 1600000 , indexLabel: "cao nhất"}
+        ]
+      }
+      ]
+    });
+        chart1.render();
+    var chart2 = new CanvasJS.Chart("chartContainer2",
+    {
+
+      title:{
+      text: "Thu nhập theo tháng trong năm 2018"
+      },
+      axisX: {
+        valueFormatString: "MMM",
+        interval:1,
+        intervalType: "month"
+      },
+      axisY:{
+        includeZero: false
+
+      },
+      data: [
+      {
+        type: "line",
+
+        dataPoints: [
+        { x: new Date(2018, 00, 1), y: 100000},
+        { x: new Date(2018, 01, 1), y: 50000},
+        { x: new Date(2018, 02, 1), y: 500000, indexLabel: "cao nhất",markerColor: "red", markerType: "triangle"},
+        { x: new Date(2018, 03, 1), y: 46000 },
+        { x: new Date(2018, 04, 1), y: 45000 },
+        { x: new Date(2018, 05, 1), y: 50000 },
+        { x: new Date(2018, 06, 1), y: 48000 },
+        { x: new Date(2018, 07, 1), y: 48000 },
+        { x: new Date(2018, 08, 1), y: 25000 , indexLabel: "thấo nhất",markerColor: "DarkSlateGrey", markerType: "cross"},
+        { x: new Date(2018, 09, 1), y: 50000 },
+        { x: new Date(2018, 10, 1), y: 48000 },
+        { x: new Date(2018, 11, 1), y: 51000 }
+        ]
+      }
+      ]
+    });
+        chart2.render();
+    var chart3 = new CanvasJS.Chart("chartContainer3",
+    {
+
+      title:{
+      text: "Thu nhập theo quý trong năm 2018"
+      },
+      axisX: {
+        valueFormatString: "MMM",
+        interval:1,
+        intervalType: "month"
+      },
+      axisY:{
+        includeZero: false
+
+      },
+      data: [
+      {
+        type: "line",
+
+        dataPoints: [
+        { x: new Date(2018, 00, 1), y: 450000 },
+        { x: new Date(2018, 03, 1), y: 520000, indexLabel: "cao nhất",markerColor: "red", markerType: "triangle"},
+        { x: new Date(2018, 06, 1), y: 460000 },
+        { x: new Date(2018, 09, 1), y: 410000 , indexLabel: "thấp nhất",markerColor: "DarkSlateGrey", markerType: "cross"},
+        ]
+      }
+      ]
+    });
+
+    chart3.render();
+  }
+  </script>
+ <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script></head>
+
+    <div id="chartContainer1" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+    <div id="chartContainer2" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+    <div id="chartContainer3" style="height: 370px; max-width: 920px; margin: 0px auto;"></div>
+
