--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -1,56 +1,36 @@
 <div class="content mt-3">
             <div class="animated fadeIn">
-                <div class="row">
+              <div class="row">
 
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <strong class="card-title">Data Table</strong>
+                            <strong class="card-title">Bảng dữ liệu</strong>
                         </div>
                         <div class="card-body">
-                  <table id="bootstrap-data-table" class="table table-striped table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Họ và tên</th>
-                        <th>Email</th>
-                        <th>Account</th>
-                        <th>Password</th>
-                        <th><button><a href="#">Thêm khách hàng</a></button></th>
-						<th></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>Võ Minh Hoàng</td>
-                        <td>hhhh@gmail.com</td>
-                        <td>vominhhoang</td>
-                        <td>12345678</td>
-						<th><button><a href="/change_info">Chỉnh Sửa</a></button></th>
-                      </tr>
-                      <tr>
-                        <td>Võ Minh Hoàng</td>
-                        <td>hhhh@gmail.com</td>
-                        <td>vominhhoang</td>
-                        <td>12345678</td>
-						<th><button><a href="/change_info">Chỉnh Sửa</a></button></th>
-                      </tr>
-                      </tr>
-                      <tr>
-                        <td>Võ Minh Hoàng</td>
-                        <td>hhhh@gmail.com</td>
-                        <td>vominhhoang</td>
-                        <td>12345678</td>
-						<th><button><a href="/change_info">Chỉnh Sửa</a></button></th>
-                      </tr>
-                      </tr>
-                      <tr>
-                    </tbody>
-                  </table>
+                            <table id="bootstrap-data-table" class="table table-striped table-bordered">
+                                <thead>
+                                  <tr>
+                                        <th>Họ và tên</th>
+                                        <th>Email</th>
+                                        <th>Tài khoản</th>
+                                        <th>Mật khẩu</th>
+                                        <th><button><a href="#">Thêm khách hàng</a></button></th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                        <td>Hà Cao Duy</td>
+                                        <td>hacaoduy161@gmail.com</td>
+                                        <td>hcduy</td>
+                                        <td>123456789</td>
+						                            <th><button><a href="/change_info">Chỉnh Sửa</a></button></th>
+                                  </tr>
+                                </tbody>
+                              </table>
                         </div>
                     </div>
                 </div>
-
-
-                </div>
+              </div>
             </div><!-- .animated -->
-        </div><!-- .content -->
+</div><!-- .content -->
