--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -39,7 +39,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a href="/"><h1 style="color: white;font-family:abel"><span style="color:#FE980F;font-family: abel;">D.</span>CAO</h1></a>
+                <a href="/"><h1 style="color: white;font-family:abel"><span style="color:rgb(70, 209, 219);font-family: abel;">D</span></h1></a>
             </div>
 
             <div id="main-menu" class="main-menu collapse navbar-collapse">
@@ -68,9 +68,9 @@
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Trang</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Đăng nhập</a></li>
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Đăng ký</a></li>
-                            <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Quên mật khẩu</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="#">Đăng nhập</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="#">Đăng ký</a></li>
+                            <li><i class="menu-icon fa fa-paper-plane"></i><a href="#">Quên mật khẩu</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -106,18 +106,18 @@
                             <span class="count bg-danger">5</span>
                           </button>
                           <div class="dropdown-menu" aria-labelledby="notification">
-                            <p class="red">You have 3 Notification</p>
+                            <p class="red">Bạn có 3 thông báo</p>
                             <a class="dropdown-item media bg-flat-color-1" href="#">
                                 <i class="fa fa-check"></i>
-                                <p>Server #1 overloaded.</p>
+                                <p>Server #1 quá tải.</p>
                             </a>
                             <a class="dropdown-item media bg-flat-color-4" href="#">
                                 <i class="fa fa-info"></i>
-                                <p>Server #2 overloaded.</p>
+                                <p>Server #2 quá tải.</p>
                             </a>
                             <a class="dropdown-item media bg-flat-color-5" href="#">
                                 <i class="fa fa-warning"></i>
-                                <p>Server #3 overloaded.</p>
+                                <p>Server #3 quá tải.</p>
                             </a>
                           </div>
                         </div>
@@ -130,12 +130,12 @@
                             <span class="count bg-primary">9</span>
                           </button>
                           <div class="dropdown-menu" aria-labelledby="message">
-                            <p class="red">You have 4 Mails</p>
+                            <p class="red">Bạn có 4 Mails</p>
                             <a class="dropdown-item media bg-flat-color-1" href="#">
                                 <span class="photo media-left"><img alt="avatar" src="images/avatar/1.jpg"></span>
                                 <span class="message media-body">
                                     <span class="name float-left">Jonathan Smith</span>
-                                    <span class="time float-right">Just now</span>
+                                    <span class="time float-right">Vừa xong</span>
                                         <p>Hello, this is an example msg</p>
                                 </span>
                             </a>
@@ -143,7 +143,7 @@
                                 <span class="photo media-left"><img alt="avatar" src="images/avatar/2.jpg"></span>
                                 <span class="message media-body">
                                     <span class="name float-left">Jack Sanders</span>
-                                    <span class="time float-right">5 minutes ago</span>
+                                    <span class="time float-right">5 phút trước</span>
                                         <p>Lorem ipsum dolor sit amet, consectetur</p>
                                 </span>
                             </a>
@@ -151,7 +151,7 @@
                                 <span class="photo media-left"><img alt="avatar" src="images/avatar/3.jpg"></span>
                                 <span class="message media-body">
                                     <span class="name float-left">Cheryl Wheeler</span>
-                                    <span class="time float-right">10 minutes ago</span>
+                                    <span class="time float-right">10 phút trước</span>
                                         <p>Hello, this is an example msg</p>
                                 </span>
                             </a>
@@ -159,7 +159,7 @@
                                 <span class="photo media-left"><img alt="avatar" src="images/avatar/4.jpg"></span>
                                 <span class="message media-body">
                                     <span class="name float-left">Rachel Santos</span>
-                                    <span class="time float-right">15 minutes ago</span>
+                                    <span class="time float-right">15 phúc trước</span>
                                         <p>Lorem ipsum dolor sit amet, consectetur</p>
                                 </span>
                             </a>
@@ -175,13 +175,13 @@
                         </a>
 
                         <div class="user-menu dropdown-menu">
-                                <a class="nav-link" href="#"><i class="fa fa- user"></i>My Profile</a>
+                                <a class="nav-link" href="#"><i class="fa fa- user"></i>Thông tin của tôi</a>
 
-                                <a class="nav-link" href="#"><i class="fa fa- user"></i>Notifications <span class="count">13</span></a>
+                                <a class="nav-link" href="#"><i class="fa fa- user"></i>Thông báo <span class="count">13</span></a>
 
-                                <a class="nav-link" href="#"><i class="fa fa -cog"></i>Settings</a>
+                                <a class="nav-link" href="#"><i class="fa fa -cog"></i>Cài đặt</a>
 
-                                <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Logout</a>
+                                <a class="nav-link" href="#"><i class="fa fa-power -off"></i>Đăng xuất</a>
                         </div>
                     </div>
 
